--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "aframe": "^1.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
